--- a/index.html
+++ b/index.html
@@ -87,22 +87,19 @@
     <section id="kontak" class="section">
         <h2>Kontak Kami</h2>
         <div class="kontak-info">
-            <!-- Alamat -->
             <p>
                 <strong>Alamat:</strong> 
-                <a href="Jalan Lebong Tambang,Kecamatan Lebong Utara,Kabupaten Lebong." target="_blank">Jalan Lebong Tambang,Kecamatan Lebong Utara,Kabupaten Lebong.</a>
+                <a class="Jalan Lebong Tambang,Kecamatan Lebong Utara,Kabupaten Lebong." target="_blank">Jalan Lebong Tambang,Kecamatan Lebong Utara,Kabupaten Lebong.</a>
             </p>
 
-            <!-- Facebook -->
             <p>
                 <strong>Facebook:</strong> 
-                <a href="https://Lebong Tambang" target="_blank">Lebong Tambang</a>
+                <a class="https://Lebong Tambang" target="_blank">Lebong Tambang</a>
             </p>
     
-            <!-- Email -->
             <p>
                 <strong>Email:</strong> 
-                <a href="mailto:Lebong_Tambang@gmail.com">Lebong_Tambang@gmail.com</a>
+                <a class="mailto:Lebong_Tambang@gmail.com">Lebong_Tambang@gmail.com</a>
             </p>
         </div>
     </section>
